# zeroELo_Bot

./: .gitignore  CMakeLists.txt
.github/: build.yaml
.github/workflows/: build.yaml
src/: Evaluation.h  SearchUtil.cpp  TimeManager.h  Transposition.h  main.cpp  uci.cpp  uci.h
